common/base/main.tf
/* module "ami" { */
/*   source        = "github.com/terraform-community-modules/tf_aws_ubuntu_ami/ebs" */
/*   region        = "us-west-2" */
/*   distribution  = "trusty" */
/*   instance_type = "${var.instance_type}" */
/* } */

module "vpc" {
  source   = "../vpc"

  name = "tf-asg-deployment-strategies"

  cidr = "10.0.0.0/16"
  private_subnets = "10.0.1.0/24,10.0.2.0/24,10.0.3.0/24"
  public_subnets  = "10.0.101.0/24,10.0.102.0/24,10.0.103.0/24"

  region   = "us-west-2"
  azs      = "us-west-2a,us-west-2b,us-west-2c"
}

/* resource "aws_security_group" "external" { */
/*   vpc_id = "${module.vpc.vpc_id}" */
/*  */
/*   ingress { */
/*     from_port = 22 */
/*     to_port   = 22 */
/*     protocol  = "tcp" */
/*     cidr_blocks = ["0.0.0.0/0"] */
/*   } */
/*   egress { */
/*     from_port = 0 */
/*     to_port   = 0 */
/*     protocol  = "-1" */
/*     cidr_blocks = ["0.0.0.0/0"] */
/*   } */
/*   lifecycle { create_before_destroy = true } */
/* } */
/*  */
/* resource "aws_security_group" "lb" { */
/*   vpc_id = "${module.vpc.vpc_id}" */
/*  */
/*   ingress { */
/*     from_port = 80 */
/*     to_port   = 80 */
/*     protocol  = "tcp" */
/*     cidr_blocks = ["0.0.0.0/0"] */
/*   } */
/*   egress { */
/*     from_port = 0 */
/*     to_port   = 0 */
/*     protocol  = "-1" */
/*     cidr_blocks = ["0.0.0.0/0"] */
/*   } */
/* } */
/*  */
/* resource "aws_security_group" "ssh" { */
/*   vpc_id = "${module.vpc.vpc_id}" */
/*  */
/*   ingress { */
/*     from_port = 22 */
/*     to_port   = 22 */
/*     protocol  = "tcp" */
/*     cidr_blocks = ["0.0.0.0/0"] */
/*   } */
/*   egress { */
/*     from_port = 0 */
/*     to_port   = 0 */
/*     protocol  = "-1" */
/*     cidr_blocks = ["0.0.0.0/0"] */
/*   } */
/* } */

/* resource "aws_key_pair" "ssh" { */
/*   public_key = "${var.ssh_public_key}" */
/* } */
